@@ -1,11 +1,11 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.entity.*;
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.repository.SuggestionRepository;
 import com.example.demo.service.CatalogService;
 import com.example.demo.service.FarmService;
 import com.example.demo.service.SuggestionService;
-
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -30,7 +30,6 @@ public class SuggestionServiceImpl implements SuggestionService {
 
     @Override
     public Suggestion generateSuggestion(Long farmId) {
-
         Farm farm = farmService.getFarmById(farmId);
 
         List<Crop> crops = catalogService.findSuitableCrops(
@@ -39,10 +38,9 @@ public class SuggestionServiceImpl implements SuggestionService {
                 farm.getSeason()
         );
 
-        List<String> cropNames = crops
-                .stream()
+        List<String> cropNames = crops.stream()
                 .map(Crop::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Fertilizer> fertilizers =
                 catalogService.findFertilizersForCrops(cropNames);
@@ -62,7 +60,8 @@ public class SuggestionServiceImpl implements SuggestionService {
 
     @Override
     public Suggestion getSuggestion(Long suggestionId) {
-        return suggestionRepository.findById(suggestionId).orElse(null);
+        return suggestionRepository.findById(suggestionId)
+                .orElseThrow(() -> new ResourceNotFoundException("Suggestion not found"));
     }
 
     @Override
